# scikit-opt-gpu

./: .gitignore  CMakeLists.txt  GA_gpu.cu  GA_pack.py  GA_simple.cpp  GA_temp.cpp  LICENSE  README.md  test  test_cuda_c.c
Main/: GA_gpu.cu  cublas_amax_example.cpp  main.cpp  mainACA_cuda.cu  mainACA_seq.cpp  mainCuda.cu  mainGaSeq.cpp  mainSA.cpp  mainSACuda.cu  matrixMulCUBLAS.cpp
cmake/: FindEigen3.cmake  LoadLibs.cmake
py_version/: ACA.py  ACA_test.py  GA_pack.py  PSO_test.py  SA_test.py
src/: ACA_TSP.cpp  ACA_TSP.h  GAgpu.cuh  Optimizer.cpp  Optimizer.h  ParticleSwarmOptimization.cpp  ParticleSwarmOptimization.h  ParticleSwarmOptimization.tpp  ParticleSwarmOptimizationGPU.cuh  ParticleSwarmOptimizationGPU_float.cuh  ParticleSwarmOptimizationGPU_template.h  SimulatedAnnealing.h  SimulatedAnnealingGPU.cuh  functions.cuh  ga_seq.h  helper_cuda.h  helper_functions.h  helper_image.h  helper_timer.h  test.cpp  test.h
