cmake_minimum_required(VERSION 3.0.0)
project(LibScikitGPU VERSION 0.1.0)

INCLUDE(CTest)
enable_testing()
SET(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${PROJECT_SOURCE_DIR}/cmake/")
SET(CUDA_SEPARABLE_COMPILATION ON)
SET(CMAKE_CXX_FLAGS "-std=c++17 ${CMAKE_CXX_FLAGS}")
INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR})
MACRO(SEARCH_SOURCE NAME DIRPRJ)
  FILE(GLOB_RECURSE header${NAME} ${PROJECT_SOURCE_DIR}/${DIRPRJ}/*.h)
  FILE(GLOB_RECURSE source${NAME} ${PROJECT_SOURCE_DIR}/${DIRPRJ}/*.cpp)
  # FILE(GLOB_RECURSE cuda_source${NAME} ${PROJECT_SOURCE_DIR}/${DIRPRJ}/*.cu)
ENDMACRO(SEARCH_SOURCE)

SEARCH_SOURCE(src src)
ADD_LIBRARY(LibScikitGPU SHARED
    ${sourcesrc} ${headersrc})
TARGET_LINK_LIBRARIES(LibScikitGPU ${ALL_LIBRARIES} ${ALL_STATIC_LIBRARIES})


MACRO(ADD_EXE NAME)
    ADD_EXECUTABLE(${NAME} Main/${NAME}.cpp)
    TARGET_LINK_LIBRARIES(${NAME} LibScikitGPU ${ALL_STATIC_LIBRARIES})
ENDMACRO(ADD_EXE)

ADD_EXE(main)

SET(CPACK_PROJECT_NAME ${PROJECT_NAME})
SET(CPACK_PROJECT_VERSION ${PROJECT_VERSION})
INCLUDE(CPack)
INCLUDE("${PROJECT_SOURCE_DIR}/cmake/LoadLibs.cmake")
